<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Dietribe</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="profile_target">Profile - Targets</string>
    <string name="dashboard">Dashboard</string>
    <string name="tools">Tools</string>
    <string name="mealmanager">Meal Manager</string>
    <string name="preferences">Preferences</string>
    <string name="user">User</string>
    <string name="menulist">Fast Food Menus</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="remove">Remove</string>
    <string name="edit">Edit</string>
    <string name="add_item">Add Item</string>
    <string name="clear">Clear</string>
    <string name="noresults">No Results</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="gender">Gender</string>
    <string name="activity_level">Activity Level</string>
    <string name="next">Next</string>
    <string name="done">Done</string>
    <string name="daily_summary"></string>
    <string name="date">Date</string>
    <string name="nutrition_facts">Nutrition Facts</string>
    <string name="serving">Serving</string>
    <string name="serving_size">Serving Size</string>
    <string name="amount">Amount</string>
    <string name="measure">Measure</string>
    <string name="amount_per_serving">Amount Per Serving</string>
    <string name="calories">Calories</string>
    <string name="percent_dv">Percent Daily Value</string>
    <string name="totalfat">Total Fat</string>
    <string name="satfat"> Saturated Fat</string>
    <string name="satfat_abbrev">Sat Fat</string>
    <string name="transfat"> Trans Fat</string>
    <string name="protein">Protein</string>
    <string name="totalcarb">Total Carb</string>
    <string name="dietaryfiber">Dietary Fiber</string>
    <string name="fiber">Fiber</string>
    <string name="sugars">Sugars</string>
    <string name="cholesterol">Cholesterol</string>
    <string name="sodium">Sodium</string>
    <string name="potassium">Potassium</string>
    <string name="vitaminA">Vitamin A</string>
    <string name="vitaminC">Vitamin C</string>
    <string name="calcium">Calcium</string>
    <string name="iron">Iron</string>
    <string name="time">Time</string>
    <string name="distance">Distance</string>
    <string name="pace">Pace</string>
    <string name="start">Start</string>
    <string name="cancel">Cancel</string>
    <string name="pedometer">Pedometer</string>
    <string name="calories_summary">49.9% 999 / 2000</string>
    <string name="nutrient_progress">0.0g 000%</string>
    <string name="previous_entry">Previous Entry</string>
    <string name="add_meal">Meals</string>
    <string name="exercise">Exercise</string>
    <string name="add_meal_from">Add Meal item from...</string>
    <string name="add_exercise">Exercise</string>
    <string name="evaluate">Evaluate</string>
    <string name="select">Select</string>
    <string name="details">Details</string>
    <string name="starbucks">Starbucks</string>
    <string name="allrestaurants">All Restaurants</string>
    <string name="favorites">Favorites</string>
    <string name="size">Size</string>
    <string name="drink">Drink</string>
    <string name="milk">Milk</string>
    <string name="X"> X </string>
    <string name="food_group">Food Group</string>
    <string name="finish">Finish</string>
    <string name="duration">Duration</string>
    <string name="calories_burned">Calories Burned</string>
<string name="welcome">Welcome</string>
<string name="alert_dialog_first_run">Thank you for using Dietribe! In order to better assess your nutritional needs, please fill out the following profile information.</string>
<string name="ok">OK</string>
<string name="save">Save</string>
<string name="discard">Discard</string>
<string name="ghostData_name">Meal Name</string>
<string name="addPicture">Add Icon</string>
<string name="missing_name">Missing Name</string>
<string name="missing_nutrients">Missing Nutrients</string>
<string name="missing_name_msg">You must give a name for this meal item.</string>
<string name="missing_nutrients_msg">You must include at least one nutrient for this meal item.</string>
<string name="delete_entry">Delete Entry</string>
<string name="moreinfo">More Info</string>
<string name="delete_entry_msg">Are you sure you want to delete this meal item entry?</string>
</resources>
