<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center_horizontal"
                android:scrollbars="vertical|horizontal"> 
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent">
       <TextView
           android:text="@string/exercise"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textStyle="bold"
           android:padding="3dip" />

       <Spinner android:id="@+id/exercisespinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
       <TextView
           android:text="@string/duration"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textStyle="bold"
           android:padding="3dip" />

       <TimePicker android:id="@+id/duration_timepicker"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content" />

       <TextView
           android:text="@string/calories_burned"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textStyle="bold"
           android:padding="3dip" />

       <EditText android:id="@+id/calories_burned"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text=""
           android:padding="3dip"
           android:scrollHorizontally="false"
           android:background="@android:drawable/editbox_background" />   


       <Button android:id="@+id/add_exercise_button"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/add" />

</LinearLayout>
</ScrollView>